# advent-of-code

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  add_namespace.pl  advent-of-code.code-workspace  bazel-advent-of-code  bazel-bin  bazel-out  bazel-testlogs  benchmark.cc  cleanup.sh  fbtd-win32.patch  new_day.pl  run_year.cc  update_workspace.date  update_workspace.pl
2019/day1/: 1.pl  2.pl  output2.txt
advent_of_code/: BUILD  advent_day.cc  advent_day.h  benchmark.cc  bfs.h  board_search.h  char_board.cc  char_board.h  conway.cc  conway.h  dag.h  dag_sort.h  directed_graph.cc  directed_graph.h  fast_board.h  file_benchmark.cc  file_benchmark.h  file_test.cc  file_test.h  file_test_options.cc  file_test_options.h  file_util.cc  file_util.h  graph_forest.h  graph_walk.h  interval.cc  interval.h  loop_history.h  md5.h  mod.cc  mod.h  ocr.cc  ocr.h  opt_cmp.h  point.cc  point.h  point3.cc  point3.h  point4.h  point_walk.h  (+6 more)
advent_of_code/2015/: BUILD
advent_of_code/2015/benchmark/: benchmark_hamartia.json  benchmark_hamartia.txt  benchmark_hubris.json  benchmark_hubris.txt  benchmark_keith-mbp.json  benchmark_keith-mbp.txt
advent_of_code/2015/day01/: BUILD  README.md  day01.cc  day01.h  day01.test  day01_benchmark.cc  day01_test.cc
advent_of_code/2015/day02/: BUILD  README.md  day02.cc  day02.h  day02.test  day02_benchmark.cc  day02_test.cc
advent_of_code/2015/day03/: BUILD  README.md  day03.cc  day03.h  day03.test  day03_benchmark.cc  day03_test.cc
advent_of_code/2015/day04/: BUILD  README.md  day04.cc  day04.h  day04.test  day04_benchmark.cc  day04_test.cc
advent_of_code/2015/day05/: BUILD  README.md  day05.cc  day05.h  day05.test  day05_benchmark.cc  day05_test.cc
advent_of_code/2015/day06/: BUILD  README.md  day06.cc  day06.h  day06.test  day06_benchmark.cc  day06_test.cc
advent_of_code/2015/day07/: BUILD  README.md  day07.cc  day07.h  day07.test  day07_benchmark.cc  day07_test.cc
advent_of_code/2015/day08/: BUILD  README.md  day08.cc  day08.h  day08.test  day08_benchmark.cc  day08_test.cc
advent_of_code/2015/day09/: BUILD  README.md  day09.cc  day09.h  day09.test  day09_benchmark.cc  day09_test.cc
advent_of_code/2015/day10/: BUILD  README.md  day10.cc  day10.h  day10.test  day10_benchmark.cc  day10_test.cc
advent_of_code/2015/day11/: BUILD  README.md  day11.cc  day11.h  day11.test  day11_benchmark.cc  day11_test.cc
advent_of_code/2015/day12/: BUILD  README.md  day12.cc  day12.h  day12.test  day12_benchmark.cc  day12_test.cc
advent_of_code/2015/day13/: BUILD  README.md  day13.cc  day13.h  day13.test  day13_benchmark.cc  day13_test.cc
advent_of_code/2015/day14/: BUILD  README.md  day14.cc  day14.h  day14.test  day14_benchmark.cc  day14_test.cc
advent_of_code/2016/: BUILD  assem_bunny.cc  assem_bunny.h
advent_of_code/2017/: BUILD  knot_hash.cc  knot_hash.h  knot_hash_test.cc  vm.cc  vm.h
advent_of_code/2018/: BUILD  vm.cc  vm.h
advent_of_code/2019/: BUILD  int_code.cc  int_code.h  int_code.test  int_code_test.cc
advent_of_code/2020/: BUILD  boot_code.cc  boot_code.h  personal_results.txt
advent_of_code/2021/: BUILD  bits_expr.cc  bits_expr.h  bits_expr_test.cc  personal_results.txt
advent_of_code/2022/: BUILD  personal_results.txt
advent_of_code/2023/: BUILD  benchmark.cc  personal_results.txt  whole_year.cc
advent_of_code/2024/: BUILD
advent_of_code/2025/: BUILD
advent_of_code/infra/: BUILD  file_benchmark.cc  file_benchmark.h  file_flags.cc  file_flags.h  file_test.cc  file_test.h  file_test_options.cc  file_test_options.h  file_util.cc  file_util.h  gunit_main.cc  run_day.cc  run_day.h  text_table.cc  text_table.h
advent_of_code/new_day/: new_day.test
advent_of_code/new_day_path/: BUILD  new_day.cc  new_day.h  new_day.test  new_day_benchmark.cc  new_day_test.cc
benchmark/: benchmark_hamartia.txt  benchmark_keith-mbp.txt  benchmark_out.txt  merge_benchmarks.pl  run_all_benchmarks.sh  run_year_benchmark.pl  sort_benchmark.pl
tools/: BUILD  add_advent_register.pl  add_benchmark_lib.pl  add_test_file.pl  add_title.pl  get_input.pl  get_problem.pl  merge_benchmarks.pl  new_day.pl  personal_results_geomean.pl  run_all_benchmarks.sh  run_year_benchmark.pl  whole_year.sh
tools/lsc/: add_test_file.pl  add_title.pl  add_url_comment.pl  dedup_namespace.pl  remove_benchmark_lib.pl  write_day_test.pl
(+1796 files in other folders)
