###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "re2", version = "2025-11-05")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "com_monkeynova_base_workspace")
bazel_dep(name = "com_monkeynova_gunit_main")
bazel_dep(name = "com_google_file_based_test_driver")

git_override(
   module_name = "com_monkeynova_base_workspace",
   remote = "https://github.com/monkeynova/base-workspace.git",
   # branch = "main",
   commit = "49867f63b311391d6ccdaf99b7e5cbc5b9750120",
)

git_override(
    module_name = "com_monkeynova_gunit_main",
    remote = "https://github.com/monkeynova/gunit-main.git",
    # branch = "main",
    commit = "8fd8b9206b3d802d859ad1b7eec7129ab849a60c",
)

git_override(
    # no_update = "release relies on abseil breaking change (Nullability templates)",
    module_name = "com_google_file_based_test_driver",
    remote = "https://github.com/google/file-based-test-driver.git",
    commit = "fd7661b168f640f68da39f97dad26e426eb6c339",
    patches = ["third_party/fbtd.patch", "third_party/fbtd-win32.patch"],
    patch_strip = 1,
)

single_version_override(
    module_name = "google_benchmark",
    #patches = ["third_party/benchmark.patch"],
    #patch_strip = 1,
)
